--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,36 +16,41 @@
     <header class="shadow-md">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <li>
-              <%= link_to "Bookers", root_path %>
-            </li>
-          <% if user_signed_in? %>
-            <li>
-              <%= link_to "Home", user_path(current_user.id) %>
-            </li>
-            <li>
-              <%= link_to "Users", users_path %>
-            </li>
-            <li>
-              <%= link_to "Books", books_path %>
-            </li>
-            <li>
-              <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-            </li>
-          <% else %>
-            <li>
-              <%= link_to "Home", root_path %>
-            </li>
-            <li>
-              <%= link_to "About", about_path %>
-            </li>
-            <li>
-              <%= link_to "Sign up", new_user_registration_path %>
-            </li>
-            <li>
-              <%= link_to "Log in", new_user_session_path %>
-            </li>
-          <% end %>
+          <a class="navbar-brand" href="/">Bookers</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
+              <li>
+                <%= link_to "Home", user_path(current_user.id) %>
+              </li>
+              <li>
+                <%= link_to "Users", users_path %>
+              </li>
+              <li>
+                <%= link_to "Books", books_path %>
+              </li>
+              <li>
+                <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+              </li>
+            <% else %>
+              <li>
+                <%= link_to "Home", root_path %>
+              </li>
+              <li>
+                <%= link_to "About", about_path %>
+              </li>
+              <li>
+                <%= link_to "Sign up", new_user_registration_path %>
+              </li>
+              <li>
+                <%= link_to "Log in", new_user_session_path %>
+              </li>
+            <% end %>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
