[Add]ヘッダーレイアウト終了

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bookers22</title>
+    <title>Bookers2</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -14,7 +14,7 @@
 
   <body class="d-flex flex-column vh-100" >
     <header class="shadow-md">
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="/">Bookers</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,29 +24,45 @@
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
               <li>
-                <%= link_to "Home", user_path(current_user.id) %>
+                <%= link_to user_path(current_user.id), class: "mx-2 text-light" do %>
+                  <i class="fa-solid fa-house"></i>Home
+                <% end %>
               </li>
               <li>
-                <%= link_to "Users", users_path %>
+                <%= link_to users_path, class: "mx-2 text-light" do %>
+                  <i class="fa-solid fa-users"></i>Users
+                <% end %>
               </li>
               <li>
-                <%= link_to "Books", books_path %>
+                <%= link_to books_path, class: "mx-2 text-light" do %>
+                  <i class="fa-solid fa-book-open"></i>Books
+                <% end %>
               </li>
               <li>
-                <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+                <%= link_to destroy_user_session_path, method: :delete, class: "mx-2 text-light" do %>
+                  <i class="fa-solid fa-right-from-bracket"></i>Log out
+                <% end %>
               </li>
             <% else %>
               <li>
-                <%= link_to "Home", root_path %>
+                <%= link_to root_path, class: "mx-2 text-light" do %>
+                  <i class="fa-solid fa-house"></i>Home
+                <% end %>
               </li>
               <li>
-                <%= link_to "About", about_path %>
+                <%= link_to about_path, class: "mx-2 text-light" do %>
+                  <i class="fa-solid fa-link"></i>About
+                <% end %>
               </li>
               <li>
-                <%= link_to "Sign up", new_user_registration_path %>
+                <%= link_to new_user_registration_path, class: "mx-2 text-light" do %>
+                  <i class="fa-solid fa-user-plus"></i>Sign up
+                <% end %>
               </li>
               <li>
-                <%= link_to "Log in", new_user_session_path %>
+                <%= link_to new_user_session_path, class: "mx-2 text-light" do %>
+                  <i class="fa-solid fa-right-to-bracket"></i>Log in
+                <% end %>
               </li>
             <% end %>
             </ul>
