[Add]フッター作成、トップページ作成

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,14 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class="container">
+  <div class="row mt-4">
+    <div class="mx-auto col-sm-10 col-lg-8 col-xl-6">
+      <h1>welcome to
+        <strong><i class="fa-solid fa-book"></i>Bookers !!</strong>
+      </h1>
+      <p>In <i class="fa-solid fa-book"></i>Bookers,</p>
+      <p>you can share and exchange your opinions , inpressions , and emotions</p>
+      <p>about various books!</p>
+      
+      
+    </div>
+  </div>
+</div>
