--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,6 +70,13 @@
         </div>
       </nav>
     </header>
+    
+    <main class="mb-auto">
     <%= yield %>
+    </main>
+    
+    <footer class="mx-auto mb-3">
+      CopyRight Infratop.inc
+    </footer>
   </body>
 </html>
