--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -8,7 +8,12 @@
       <p>you can share and exchange your opinions , inpressions , and emotions</p>
       <p>about various books!</p>
       
-      
+      <div class="btn-wrapper col-10 mx-auto">
+        <div class="row">
+          <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-block" %>
+          <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-block" %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
