[Add]部分テンプレートで左側完成

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-3">
-      <h2>User info</h2>
-      <%= image_tag @user.get_profile_image(100, 100) %>
-      <table class="table">
-        <tbody>
-          <tr>
-            <th>name</th>
-            <th><%= @user.name %></th>
-          </tr>
-          <tr>
-            <th>introduction</th>
-            <th></th>
-          </tr>
-        </tbody>
-      </table>
-      <%= link_to edit_user_path(@user), class: "btn btn-outline-secondary btn-block" do %>
-        <i class="fa-solid fa-user-gear"></i>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= render 'books/list', user: @user, book: @book %>
