--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -15,15 +15,12 @@
           </tr>
         </tbody>
       </table>
+      
       <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
         <i class="fa-solid fa-user-gear"></i>
       <% end %>
-    </div>
-  </div>
-
-  <div class="row mt-2">
-    <div class="col-md-3">
-      <h2>New book</h2>
+    
+      <h2 class="mt-3">New book</h2>
 
       <%= form_with model: book do |f| %>
         <p>Title</p>
@@ -33,5 +30,4 @@
         <%= f.submit "Create Book", class: "mt-2 btn btn-success" %>
       <% end %>
     </div>
-  </div>
-</div>
+  
