--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,18 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<%= render 'list', user: @user, book: @book %>
+
+<div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+
+        <table class="table">
+          <tbody>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </tbody>
+          
+        </table>
+    </div>
+  </div>
+</div>
