[Add]bookの詳細ページ終了

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,12 +6,18 @@
         <table class="table">
           <tbody>
             <tr>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><%= link_to (image_tag @user.get_profile_image(80,80)), user_path(@user.id) %><br>
+                  <%= link_to @user.name, user_path(@user.id) %>
+              </td>
+              <td><%= link_to @book.title, book_path(@book.id) %></td>
+              <td><%= @book.body %></td>
+              <% if @book.user == current_user %>
+              <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success" %></td>
+              <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？", class: "btn btn-danger" %></td>
+              <% end %>
             </tr>
           </tbody>
-          
+
         </table>
     </div>
   </div>
