--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -15,14 +15,14 @@
           </tr>
         </tbody>
       </table>
-      
+
       <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
         <i class="fa-solid fa-user-gear"></i>
       <% end %>
-    
+
       <h2 class="mt-3">New book</h2>
 
-      <%= form_with model: book do |f| %>
+      <%= form_with model: Book.new do |f| %>
         <p>Title</p>
         <%= f.text_field :title %>
         <p>Opinion</p>
@@ -30,4 +30,3 @@
         <%= f.submit "Create Book", class: "mt-2 btn btn-success" %>
       <% end %>
     </div>
-  
