--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,19 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-sm-12 col-md-8 col-lg-5">
+      <h1>Editing Book</h1>
+      
+      <%= form_with model: @book do |f| %>
+      
+      <p>Title</p>
+      <%= f.text_field :title %>
+      <p>Opinion</p>
+      <%= f.text_area :body %><br>
+      <%= f.submit "Update Book", class: "btn btn-success" %>
+      
+      <% end %>
+      
+      
+    </div>
+  </div>
+</div>
