--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -13,6 +13,7 @@
       
       <% end %>
       
+      <%= link_to "Show", book_path(@book.id) %> | <%= link_to "Back", books_path %>
       
     </div>
   </div>
