--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,17 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 mx-auto pt-3">
+      <h2>User info</h2>
+
+      <%= form_with model: @user do |f| %>
+        <label for="inputName">Name</label><br>
+        <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前" %><br>
+        <label for="inputImage">Image</label><br>
+        <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %><br>
+        <label for="inputIntroduction">Introduction</label><br>
+        <%= f.text_area :introduction, maxlength: 50 %><br>
+        <%= f.submit "Update User", class: "btn btn-secondary" %>
+      <% end %>
+    </div>
+  </div>
+</div>
