[Add]フラッシュメッセージ実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,11 +70,14 @@
         </div>
       </nav>
     </header>
-    
+
     <main class="mb-auto">
-    <%= yield %>
+      <% flash.each do |message_type, message| %>
+        <div class="flash-message <%= message_type %>"><%= message %></div>
+      <% end %>
+      <%= yield %>
     </main>
-    
+
     <footer class="mx-auto mb-3">
       CopyRight Infratop.inc
     </footer>
