--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,9 +1,35 @@
-<h2>New book</h2>
-
-<%= form_with model: @book do |f| %>
-  <p>Title</p>
-  <%= f.text_field :title %>
-  <p>Opinion</p>
-  <%= f.text_area :body %><br>
-  <%= f.submit "Create Book", class: "mt-2 btn btn-success" %>
+<% if @book.errors.any? %>
+  <h2><%= @book.errors.count %>error prohibited this obj from being saved:</h2>
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
 <% end %>
+
+<%= render 'list', user: @user, book: @book %>
+
+<div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+
+        <table class="table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+            </tr>
+          </thead>
+          <% @books.each do |book| %>
+          <tbody>
+            <tr>
+              <td><%= link_to (image_tag book.user.get_profile_image(80,80)), user_path(book.user.id) %></td>
+              <td><%= link_to book.title, book_path(book.id) %></td>
+              <td><%= book.body %></td>
+            </tr>
+          </tbody>
+          <% end %>
+        </table>
+    </div>
+  </div>
+</div>
