--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,6 +3,15 @@
     <div class="col-sm-12 col-md-8 col-lg-5 mx-auto pt-3">
       <h2>User info</h2>
 
+      <% if @user.errors.any? %>
+        <h2><%= @user.errors.count %>error prohibited this obj from being saved:</h2>
+        <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
+
       <%= form_with model: @user do |f| %>
         <label for="inputName">Name</label><br>
         <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前" %><br>
