--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,6 +12,7 @@
               
               <td><%= link_to @book.title, book_path(@book.id) %></td>
               <td><%= @book.body %></td>
+              <td><%= render "favorites/btn", book: @book %></td>
               <% if @book.user == current_user %>
                 <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success" %></td>
                 <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？", class: "btn btn-danger" %></td>
