--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,7 @@
               <th></th>
               <th>Title</th>
               <th>Opinion</th>
+              <th></th>
             </tr>
           </thead>
           <% @books.each do |book| %>
@@ -17,6 +18,7 @@
               <td><%= link_to (image_tag book.user.get_profile_image(80,80)), user_path(book.user.id) %></td>
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
+              <td><%= render "favorites/btn", book: book %></td>
             </tr>
           </tbody>
           <% end %>
