--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -19,6 +19,7 @@
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
               <td><%= render "favorites/btn", book: book %></td>
+              <td>コメント数: <%= book.book_comments.count %></td>
             </tr>
           </tbody>
           <% end %>
