--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,14 +13,18 @@
               <td><%= link_to @book.title, book_path(@book.id) %></td>
               <td><%= @book.body %></td>
               <td><%= render "favorites/btn", book: @book %></td>
+              <td>コメント数: <%= @book.book_comments.count %></td>
               <% if @book.user == current_user %>
                 <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success" %></td>
                 <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？", class: "btn btn-danger" %></td>
               <% end %>
             </tr>
           </tbody>
-
         </table>
+        
+        <%= render "book_comments/index", book: @book %>
+        <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
+        
     </div>
   </div>
 </div>
