--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -16,6 +16,14 @@
         </tbody>
       </table>
 
+      <% if current_user != user %>
+        <% if current_user.following?(user) %>
+          <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info" %>
+        <% else %>
+          <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %>
+        <% end %>
+      <% end %>
+
       <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
         <i class="fa-solid fa-user-gear"></i>
       <% end %>
