--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -13,6 +13,14 @@
             <th>introduction</th>
             <th><%= user.introduction %></th>
           </tr>
+          <tr>
+            <th>follows</th>
+            <th><%= link_to user.followings.count, user_followings_path(user) %></th>
+          </tr>
+          <tr>
+            <th>followers</th>
+            <th><%= link_to user.followers.count, user_followers_path(user) %></th>
+          </tr>
         </tbody>
       </table>
 
