--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
             <tr>
               <th>image</th>
               <th>name</th>
-              <th></th>
+              <th colspan="4"></th>
             </tr>
           </thead>
           <% @users.each do |user| %>
@@ -16,7 +16,18 @@
             <tr>
               <td><%= image_tag user.get_profile_image(80,80) %></td>
               <td><%= user.name %></td>
+              <td>フォロー数：<%= user.followings.count %></td>
+              <td>フォロワー数：<%= user.followers.count %></td>
               <td><%= link_to "Show", user_path(user.id) %></td>
+              <td>
+                <% if current_user != user %>
+                  <% if current_user.following?(user) %>
+                    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info" %>
+                  <% else %>
+                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %>
+                  <% end %>
+                <% end %>
+              </td>
             </tr>
           </tbody>
           <% end %>
