--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,7 +18,9 @@
               <td><%= link_to (image_tag book.user.get_profile_image(80,80)), user_path(book.user.id) %></td>
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
-              <td><%= render "favorites/btn", book: book %></td>
+              <td id="favorite_btn_<%= book.id %>">
+                <%= render "favorites/btn", book: book %>
+              </td>
               <td>コメント数: <%= book.book_comments.count %></td>
             </tr>
           </tbody>
