--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,7 +12,9 @@
               
               <td><%= link_to @book.title, book_path(@book.id) %></td>
               <td><%= @book.body %></td>
-              <td><%= render "favorites/btn", book: @book %></td>
+              <td id="favorite_btn_<%= @book.id %>">
+                <%= render "favorites/btn", book: @book %>
+              </td>
               <td>コメント数: <%= @book.book_comments.count %></td>
               <% if @book.user == current_user %>
                 <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success" %></td>
