[Add]コメント非同期通信ビュー、コントローラー追記

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,7 +15,7 @@
               <td id="favorite_btn_<%= @book.id %>">
                 <%= render "favorites/btn", book: @book %>
               </td>
-              <td>コメント数: <%= @book.book_comments.count %></td>
+              <td>コメント数: <span id="comment_count"><%= @book.book_comments.count %></span></td>
               <% if @book.user == current_user %>
                 <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success" %></td>
                 <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？", class: "btn btn-danger" %></td>
@@ -24,7 +24,9 @@
           </tbody>
         </table>
         
-        <%= render "book_comments/index", book: @book %>
+        <div id="comment_index">
+          <%= render "book_comments/index", book: @book %>
+        </div>
         <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
         
     </div>
