[Add]コメント非同期通信完了

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -21,7 +21,7 @@
               <td id="favorite_btn_<%= book.id %>">
                 <%= render "favorites/btn", book: book %>
               </td>
-              <td>コメント数: <%= book.book_comments.count %></td>
+              <td>コメント数: <span id="comment_count"><%= book.book_comments.count %></span></td>
             </tr>
           </tbody>
           <% end %>
