--- a/app/views/book_comments/_index.html.erb
+++ b/app/views/book_comments/_index.html.erb
@@ -11,7 +11,7 @@
       <td><%= book_comment.comment %></td>
       <td>
         <% if book_comment.user == current_user %>
-          <%= link_to "Destroy", book_book_comment_path(book, book_comment), method: :delete, "data-confirm" => "本当に消しますか？", class: "btn btn-sm btn-danger float-end" %>
+          <%= link_to "Destroy", book_book_comment_path(book, book_comment), method: :delete, "data-confirm" => "本当に消しますか？", class: "btn btn-sm btn-danger float-end", remote: true %>
         <% end %>
       </td>
     </tr>
