--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,7 +27,9 @@
         <div id="comment_index">
           <%= render "book_comments/index", book: @book %>
         </div>
-        <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
+        <div id="comment_form">
+          <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
+        </div>
         
     </div>
   </div>
