[Add]星評価エラー発生中

--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -38,11 +38,40 @@
 
       <h2 class="mt-3">New book</h2>
 
-      <%= form_with model: Book.new do |f| %>
+      <%= form_with model: Book.new, local: true do |f| %>
         <p>Title</p>
         <%= f.text_field :title %>
         <p>Opinion</p>
         <%= f.text_area :body %><br>
+
+        <!--starについての記述-->
+        <% if book.id.nil? %>
+          <div class="form-group" id="star">
+            <%= f.label :star %>
+            <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
+            <div id="post_raty"></div>
+          </div>
+          <script>
+            $(document).on('turbolinks:load', function() {
+              let elem = document.querySelector('#post_raty');
+              if (elem == null) return;
+
+              elem.innerHTML = ""
+              let opt = {
+                starOn: "<%= asset_path('star-on.png') %>",
+                starOff: "<%= asset_path('star-off.png') %>",
+                starHalf: "<%= asset_path('star-half.png') %>",
+                scoreName: 'book[star]',
+              };
+              raty(elem, opt);
+            });
+          </script>
+        <% else %>
+          <div class="form-group">
+            <%= render "static.rate", book: book %>
+          </div>
+        <% end %>
+
         <%= f.submit "Create Book", class: "mt-2 btn btn-success" %>
       <% end %>
     </div>
