--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -22,6 +22,7 @@
                 <%= render "favorites/btn", book: book %>
               </td>
               <td>コメント数: <span id="comment_count"><%= book.book_comments.count %></span></td>
+              <td><%= render "static.rate", book: book %></td>
             </tr>
           </tbody>
           <% end %>
