--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,13 +9,15 @@
               <td><%= link_to (image_tag @user.get_profile_image(80,80)), user_path(@user.id) %><br>
                   <%= link_to @user.name, user_path(@user.id) %>
               </td>
-              
+
               <td><%= link_to @book.title, book_path(@book.id) %></td>
               <td><%= @book.body %></td>
               <td id="favorite_btn_<%= @book.id %>">
                 <%= render "favorites/btn", book: @book %>
               </td>
               <td>コメント数: <span id="comment_count"><%= @book.book_comments.count %></span></td>
+              <td><%= render "static.rate", book: @book %></td>
+
               <% if @book.user == current_user %>
                 <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success" %></td>
                 <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？", class: "btn btn-danger" %></td>
@@ -23,14 +25,14 @@
             </tr>
           </tbody>
         </table>
-        
+
         <div id="comment_index">
           <%= render "book_comments/index", book: @book %>
         </div>
         <div id="comment_form">
           <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
         </div>
-        
+
     </div>
   </div>
 </div>
