--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,20 +2,20 @@
   <div class="row">
     <div class="mx-auto col-sm-12 col-md-8 col-lg-5">
       <h1>Editing Book</h1>
-      
+
       <%= form_with model: @book do |f| %>
-      
+
       <p>Title</p>
       <%= f.text_field :title %>
       <p>Opinion</p>
       <%= f.text_area :body %><br>
-      <%= render "static.rate", book: book %><br>
+      <%= render "static.rate", book: @book %><br>
       <%= f.submit "Update Book", class: "btn btn-success" %>
-      
+
       <% end %>
-      
+
       <%= link_to "Show", book_path(@book.id) %> | <%= link_to "Back", books_path %>
-      
+
     </div>
   </div>
 </div>
