--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,10 @@
               <td><%= link_to (image_tag book.user.get_profile_image(80,80)), user_path(book.user.id) %></td>
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
-              <td><%= render "favorites/btn", book: book %></td>
+              <td id="favorite_btn_<%= book.id %>">
+                <%= render "favorites/btn", book: book %>
+              </td>
+              <td><%= render "books/static.rate", book: book %></td>
             </tr>
           </tbody>
           <% end %>
