[Add]ソート機能完了

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,13 +3,16 @@
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
 
+      <%= link_to '新しい順', books_path(latest: "true") %>
+      |<%= link_to '評価の高い順', books_path(star_count: "true") %>
+
         <table class="table">
           <thead>
             <tr>
               <th></th>
               <th>Title</th>
               <th>Opinion</th>
-              <th></th>
+              <th colspan="4"></th>
             </tr>
           </thead>
           <% @books.each do |book| %>
