--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
               <th></th>
               <th>Title</th>
               <th>Opinion</th>
-              <th></th>
+              <th colspan="4"></th>
             </tr>
           </thead>
           <% @books.each do |book| %>
