--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -46,10 +46,17 @@
 
         <!--starについての記述-->
         <div class="form-group" id="star">
-        <%= f.label :star %>
-        <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
-        <div id="post_raty"></div>
-      </div>
+          <%= f.label :star %>
+          <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
+          <div id="post_raty"></div>
+        </div>
+      
+        <!--タグについての記述-->
+        <div class="form-group">
+          <label>Tag</label>
+          <%= f.text_field :tag, class: 'form-control book_' %>
+        </div>
+      
       <script>
         $(document).on('turbolinks:load', function() {
           let elem = document.querySelector('#post_raty');
