--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -21,6 +21,11 @@
               <td><%= link_to (image_tag book.user.get_profile_image(80,80)), user_path(book.user.id) %></td>
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
+              <td>
+                <% if book.tag.present? %>
+                  <%= link_to book.tag, tagsearches_search_path(content: book.tag) %>
+                <% end %>
+              </td>
               <td id="favorite_btn_<%= book.id %>">
                 <%= render "favorites/btn", book: book %>
               </td>
