--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,6 +12,11 @@
 
               <td><%= link_to @book.title, book_path(@book.id) %></td>
               <td><%= @book.body %></td>
+              <td>
+              　　<% if @book.tag.present? %>
+              　　　　<%= link_to @book.tag,tagsearches_search_path(content:@book.tag)%>
+              　　<% end %>
+              </td>
               <td id="favorite_btn_<%= @book.id %>">
                 <%= render "favorites/btn", book: @book %>
               </td>
