--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -31,9 +31,12 @@
           <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %>
         <% end %>
       <% end %>
-
-      <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
-        <i class="fa-solid fa-user-gear"></i>
+      
+      <!--プロフィール編集ボタン-->
+      <% unless user.guest_user? %>
+        <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+          <i class="fa-solid fa-user-gear"></i>
+        <% end %>
       <% end %>
 
       <h2 class="mt-3">New book</h2>
