--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,6 +10,7 @@
       
       <div class="btn-wrapper col-10 mx-auto">
         <div class="row">
+          <%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, class: "btn btn-secondary btn-block", method: :post %>
           <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-block" %>
           <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-block" %>
         </div>
