--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,9 +4,9 @@
       <h1>welcome to
         <strong><i class="fa-solid fa-book"></i>Bookers !!</strong>
       </h1>
-      <p>In <i class="fa-solid fa-book"></i>Bookers,</p>
-      <p>you can share and exchange your opinions , inpressions , and emotions</p>
-      <p>about various books!</p>
+      <p class="top-page">In <i class="fa-solid fa-book"></i>Bookers,</p>
+      <p class="top-page">you can share and exchange your opinions , inpressions , and emotions</p>
+      <p class="top-page">about various books!</p>
       
       <div class="btn-wrapper col-10 mx-auto">
         <div class="row">
