--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,31 @@
 <div class="container">
   <div class="row mt-4">
+
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+           <%= image_tag 'book-1.jpg' %>
+        </div>
+        <div class="swiper-slide">
+           <%= image_tag 'book-2.jpg' %>
+        </div>
+        <div class="swiper-slide">
+           <%= image_tag 'book-3.jpg' %>
+        </div>
+        <div class="swiper-slide">
+           <%= image_tag 'book-4.jpg' %>
+        </div>
+        <div class="swiper-slide">
+           <%= image_tag 'book-5.jpg' %>
+        </div>
+      </div>
+      <!-- ページネーションの要素 -->
+      <div class="swiper-pagination"></div>
+      <!-- ナビゲーションボタン （前、次） -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
+
     <div class="mx-auto col-sm-10 col-lg-8 col-xl-6">
       <h1>welcome to
         <strong><i class="fa-solid fa-book"></i>Bookers !!</strong>
