[Add]レイアウト修正

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,7 +1,34 @@
 <div class="container">
-  <div class="row">
+  <div class="row mt-4">
     <h1 class="mx-auto mt-3">Welcome to
         <strong><i class="fa-solid fa-book"></i>Bookers!</strong>
     </h1>
+  </div>
+  
+  <div class="row mt-4">
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+           <%= image_tag 'book-1.jpg' %>
+        </div>
+        <div class="swiper-slide">
+           <%= image_tag 'book-2.jpg' %>
+        </div>
+        <div class="swiper-slide">
+           <%= image_tag 'book-3.jpg' %>
+        </div>
+        <div class="swiper-slide">
+           <%= image_tag 'book-4.jpg' %>
+        </div>
+        <div class="swiper-slide">
+           <%= image_tag 'book-5.jpg' %>
+        </div>
+      </div>
+      <!-- ページネーションの要素 -->
+      <div class="swiper-pagination"></div>
+      <!-- ナビゲーションボタン （前、次） -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
   </div>
 </div>
