--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,42 +1,42 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 mt-3">
-      
+
       <h2>Sign up</h2>
 
       <%= form_with model: @user, url: user_registration_path do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
-      
+
         <div class="field">
           <%= f.label :name %><br>
-          <%= f.text_field :name %>
+          <%= f.text_field :name, required: true, placeholder: "名前を入力" %>
         </div>
-      
+
         <div class="field">
           <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", required: true, placeholder: "メールアドレスを入力" %>
         </div>
-      
+
         <div class="field">
           <%= f.label :password %>
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
           <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
+          <%= f.password_field :password, autocomplete: "new-password", required: true, placeholder: "パスワードを入力" %>
         </div>
-      
+
         <div class="field">
           <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", required: true, placeholder: "パスワードを再入力" %>
         </div>
-      
+
         <div class="actions">
           <%= f.submit "Sign up", class: "btn btn-success" %>
         </div>
       <% end %>
-      
+
       <%= render "devise/shared/links" %>
-      
+
     </div>
   </div>
 </div>
