--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -31,7 +31,7 @@
           <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %>
         <% end %>
       <% end %>
-      
+
       <!--プロフィール編集ボタン-->
       <% unless user.guest_user? %>
         <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
@@ -43,9 +43,9 @@
 
       <%= form_with model: Book.new, local: true do |f| %>
         <p>Title</p>
-        <%= f.text_field :title %>
+        <%= f.text_field :title, required: true %>
         <p>Opinion</p>
-        <%= f.text_area :body %><br>
+        <%= f.text_area :body, required: true %><br>
 
         <!--starについての記述-->
         <div class="form-group" id="star">
@@ -53,18 +53,18 @@
           <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
           <div id="post_raty"></div>
         </div>
-      
+
         <!--タグについての記述-->
         <div class="form-group">
-          <label>Tag</label>
-          <%= f.text_field :tag, class: 'form-control book_' %>
+          <label for="book_tag">Tag</label>
+          <%= f.text_field :tag, id: 'book_tag', required: true, class: 'form-control book_' %>
         </div>
-      
+
       <script>
         $(document).on('turbolinks:load', function() {
           let elem = document.querySelector('#post_raty');
           if (elem == null) return;
-      
+
           elem.innerHTML = ""
           let opt = {
             starOn: "<%= asset_path('star-on.png') %>",
