--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -33,6 +33,13 @@
           <% end %>
         </table>
         <%= paginate @users %>
+
+        <!--トップに戻るボタン-->
+        <sapn id="back">
+          <a href="#">
+            <%= image_tag asset_path('arrow.jpg'), data: {"turbolinks"=>false}, class: "arrow" %>
+          </a>
+        </sapn>
     </div>
   </div>
 </div>
