--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,3 +45,15 @@
 .pagination>li>a:hover {
   border-radius: 15px;    /*角を丸くする*/
 }
+
+/*トップに戻るボタン*/
+#back {
+  position: fixed;    /*表示する場所を固定*/
+  right: 20px;
+  bottom: 20px;
+}
+
+.arrow{
+  width:      50px;
+  height:     50px;
+}
