--- a/app/views/searches/_search.html.erb
+++ b/app/views/searches/_search.html.erb
@@ -1,10 +1,10 @@
 <% if user_signed_in? %>
-  <div class="search_form">
+  <div class="search_container">
     <%= form_with url: search_path, local: true, method: :get do |f| %>
-      <%= f.text_field :word %>
+      <input type="text" name="word" size="25" placeholder="キーワード検索">
       <%= f.select :range, options_for_select([['User'],['Book']]) %>
       <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"], ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
-      <%= f.submit "検索", class: "btn-sm btn-primary" %>
+      <button type="submit" class="btn-search"><i class="fa fa-search"></i></button>
     <% end %>
   </div>
 <% end %>
