[Add]レイアウト

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,7 +29,7 @@
   justify-content: center;
   margin-top: 50px;
 }
-    
+
 .pagination>li>a {
   border: none;     /*枠線をなくす*/
   color: #696969;   /*文字の色を変える*/
@@ -85,4 +85,26 @@
 
 .btn-search:hover {
   color: #000;
+}
+
+/*ソート機能の背景*/
+.styled-paragraph {
+  position: relative;
+  padding: 15px;
+  border: 3px solid #333;
+  background-color: white;
+  color: #333;
+  font-weight: bold;
+}
+
+.styled-paragraph:before {
+  position: absolute;
+  top: 100%;
+  left: 50px;
+  transform: skew(-25deg);
+  height: 15px;
+  width: 15px;
+  border-right: 3px solid #333;
+  background-color: white;
+  content: "";
 }
