--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -27,9 +27,7 @@
     </div>
 
     <div class="mx-auto col-sm-10 col-lg-8 col-xl-6">
-      <h1>welcome to
-        <strong><i class="fa-solid fa-book"></i>Bookers !!</strong>
-      </h1>
+      <h1 class="heading07" data-en="Bookers">welcome to <strong><i class="fa-solid fa-book"></i>Bookers !!</strong></h1>
       <p class="top-page">In <i class="fa-solid fa-book"></i>Bookers,</p>
       <p class="top-page">you can share and exchange your opinions , inpressions , and emotions</p>
       <p class="top-page">about various books!</p>
