--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
       <%= yield %>
     </main>
 
-    <footer class="mx-auto mb-3">
+    <footer class="mx-auto my-3">
       CopyRight Infratop.inc
     </footer>
   </body>
