[Add]ヘッダー固定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   </head>
 
   <body class="d-flex flex-column vh-100" >
-    <header class="shadow-md">
+    <header class="shadow-md sticky-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="/">Bookers</a>
