[Add]レイアウト

--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -76,6 +76,8 @@
         });
       </script>
 
-        <%= f.submit "Create Book", class: "mt-2 btn btn-success" %>
+        <button type="submit" class="btn btn-flat">
+          <span>Create Book</span>
+        </button>
       <% end %>
     </div>
