--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -135,3 +135,47 @@
   background-color: white;
   content: "";
 }
+
+/*投稿ボタン*/
+.btn-flat {
+  position: relative;
+  overflow: hidden;
+  padding: 1.5rem 6rem;
+  color: #fff;
+  background-color: #000;
+  border-radius: 0;
+}
+
+.btn-flat span {
+  position: relative;
+  z-index: 1;
+}
+
+.btn-flat:before,
+.btn-flat:after {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  content: '';
+  transition: all 0.5s ease-in-out;
+  background-color: #094;
+}
+
+.btn-flat:before {
+  left: calc(-100% + 10px);
+  transform: translateX(0) translateY(0);
+}
+
+.btn-flat:after {
+  right: calc(-100% + 10px);
+  transform: translateX(0) translateY(0);
+}
+
+.btn-flat:hover:before {
+  transform: translateX(50%) translateY(0);
+}
+
+.btn-flat:hover:after {
+  transform: translateX(-50%) translateY(0);
+}
