[Add]レイアウト

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -30,5 +30,19 @@
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
     </div>
+    
+    <!--吹き出しはじまり-->
+    <div class="balloon5">
+      <div class="faceicon">
+        <%= image_tag 'person.png' %>
+      </div>
+      <div class="chatting">
+        <div class="says">
+          <p>★文章を入れる★</p>
+        </div>
+      </div>
+    </div>
+    <!--吹き出し終わり-->
+    
   </div>
 </div>
