--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -4,7 +4,7 @@
         <strong><i class="fa-solid fa-book"></i>Bookers!</strong>
     </h1>
   </div>
-  
+
   <div class="row mt-4">
     <div class="swiper">
       <div class="swiper-wrapper">
@@ -30,7 +30,7 @@
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
     </div>
-    
+
     <!--吹き出しはじまり-->
     <div class="balloon5">
       <div class="faceicon">
@@ -38,11 +38,16 @@
       </div>
       <div class="chatting">
         <div class="says">
-          <p>★文章を入れる★</p>
+          <p>Bookersへようこそ！<br>
+             ここではたくさんの本と出会うことができるよ！
+          </p>
+        </div>
+        <div class="says">
+          <p>ログインして色んな本と出会ってみよう！</p>
         </div>
       </div>
     </div>
     <!--吹き出し終わり-->
-    
+
   </div>
 </div>
