--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row mt-4">
-    <h1 class="mx-auto mt-3">Welcome to
-        <strong><i class="fa-solid fa-book"></i>Bookers!</strong>
-    </h1>
+    <div class="ribbon">
+      <h1>Welcome to <strong><i class="fa-solid fa-book"></i> Bookers!</strong></h1>
+    </div>
   </div>
 
   <div class="row mt-4">
