--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -268,3 +268,107 @@
   text-decoration: underline;
   text-decoration-color: #40E0D0;
 }
+
+/*ログイン画面*/
+.container:before, .container:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.col-sm-12, .col-md-8, .col-lg-5 {
+  width: 100%; /* 幅を100%に設定 */
+}
+
+.form {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 360px;
+  margin: 0 auto 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.field input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+
+.field label {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: #333;
+  text-align: left;
+  display: block;
+  margin: 0 0 5px;
+}
+
+.actions .btn {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4CAF50;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+
+.actions .btn:hover, .actions .btn:active, .actions .btn:focus {
+  background: #43A047;
+}
+
+.form .message {
+  margin: 15px 0 0;
+  color: #b3b3b3;
+  font-size: 12px;
+}
+
+.form .message a {
+  color: #4CAF50;
+  text-decoration: none;
+}
+
+.form .register-form {
+  display: none;
+}
+
+.info {
+  margin: 50px auto;
+  text-align: center;
+}
+
+.info h1 {
+  margin: 0 0 15px;
+  padding: 0;
+  font-size: 36px;
+  font-weight: 300;
+  color: #1a1a1a;
+}
+
+.info span {
+  color: #4d4d4d;
+  font-size: 12px;
+}
+
+.info span a {
+  color: #000000;
+  text-decoration: none;
+}
+
+.info span .fa {
+  color: #EF3B3A;
+}
